some minor post-submission typos

--- a/agda.tex
+++ b/agda.tex
@@ -26,7 +26,7 @@ shape of derivations, closely matching standard on-paper proofs. No proof automa
 We adopt Barendregt's convention for
 bound variables \cite{urban}. Hazelnut's semantics does not need substitution, so we do not need to adopt more sophisticated encodings (e.g. \cite{lh09unibind,Pouillard11}.)
 
-\subsubsection{Determinism}
+\subsection{Determinism}
 A useful property would be \emph{action determinism}, i.e. that performing an action produces a unique result. Formally, this would be established as follows:
 % \begin{theorem}[Action Determinism] All of the following hold:
 % \label{thrm:actdet}
