--- a/hazelnut-popl17.tex
+++ b/hazelnut-popl17.tex
@@ -182,7 +182,7 @@ The examples given so far either define a language with a trivial static semanti
 
 We fundamentally differ from these projects in our design philosophy: we consider it essential to start by building type theoretic foundations, which are independent of nearly all decisions about the user interface. In contrast, these editors have developed innovative user interfaces (e.g. see the discussion in \cite{DBLP:conf/sle/VolterSBK14}) but lack a principled foundational calculus. In this respect, we follow the philosophical approach taken by languages that are rooted in the type theoretic tradition and have gone to great effort to develop a clear metatheory, like Standard ML \cite{mthm97-for-dart,Harper00atype-theoretic}.  In the future, we hope that these lines of research will merge to produce a human-usable typed structure editor with sound formal foundations. Our contribution, then, is in defining and analyzing the theoretical properties of a small foundational calculus that could be extended to achieve this vision.
 
-Some structure editor generators do operate on formal or semi-formal definitions of an underlying language. For example, the Synthesizer Generator~\cite{Reps:1984:SG:390010.808247} allows the user to define an attribute grammar-based language implementation that then can be used to generate a structured editor. CENTAUR~\cite{Borras:1988:CS:64140.65005} produces a language specific environment from a user defined formal specification of a language. Barista is a programmatic toolkit for building structure editors \cite{ko_barista:_2006}. mbeddr is build on top of the commercial JetBrains MPS framework for constructing structure editors \cite{voelter2011language,DBLP:journals/software/VoelterWK15}. These systems do not give a semantics to the edit states of the structure editor itself, or maintain non-trivial edit invariants, as Hazelnut does. 
+Some structure editor generators do operate on formal or semi-formal definitions of an underlying language. For example, the Synthesizer Generator~\cite{Reps:1984:SG:390010.808247} allows the user to define an attribute grammar-based language implementation that then can be used to generate a structured editor. CENTAUR~\cite{Borras:1988:CS:64140.65005} produces a language specific environment from a user defined formal specification of a language. Barista is a programmatic toolkit for building structure editors \cite{ko_barista:_2006}. mbeddr is built on top of the commercial JetBrains MPS framework for constructing structure editors \cite{voelter2011language,DBLP:journals/software/VoelterWK15}. These systems do not give a semantics to the edit states of the structure editor itself, or maintain non-trivial edit invariants, as Hazelnut does. 
 %These early systems were developed  of the systems are rooted in the type-theoretic tradition.
 
 Related to structure editors are value editors, which operate directly on simple values (but not generally expressions or functions) of a programming language. For example, Eros is a typed value editor based in Haskell \cite{DBLP:conf/icfp/Elliott07}.
