--- a/sumtypes.tex
+++ b/sumtypes.tex
@@ -22,7 +22,7 @@ In this section, we will conservatively extend Hazelnut with binary {sum types} 
 \paragraph{Syntax.} 
 %
 The first step is to extend the syntax of H-types and H-expressions 
-with the familiar forms \cite{pfpl}:\vsoace{-3px}
+with the familiar forms \cite{pfpl}:\vspace{-3px}
 \begin{grammar}
 \textsf{HTyp} & $\htau$ & \bnfas & $\cdots \bnfalt \tsum{\htau}{\htau}$
 \\
