removed redundant rule in supplement

--- a/hazelnut-rules/hazelnut-rules.tex
+++ b/hazelnut-rules/hazelnut-rules.tex
@@ -2405,17 +2405,17 @@ The synthetic and analytic expression action performance judgements are defined 
   }
 \end{equation}
 
-\begin{equation}
-  \inferrule{ }{
-    \performSyn
-      {\hGamma}
-      {\zwsel{\hexp}}
-      {\tehole}
-      {\aConstruct{\fap}}
-      {\hap{\hexp}{\zwsel{\hehole}}}
-      {\tehole}
-  }
-\end{equation}
+% \begin{equation}
+%   \inferrule{ }{
+%     \performSyn
+%       {\hGamma}
+%       {\zwsel{\hexp}}
+%       {\tehole}
+%       {\aConstruct{\fap}}
+%       {\hap{\hexp}{\zwsel{\hehole}}}
+%       {\tehole}
+%   }
+% \end{equation}
 
 \begin{equation}
   \inferrule{
