--- a/hazelnut-popl17.tex
+++ b/hazelnut-popl17.tex
@@ -1,5 +1,6 @@
 \def\OPTIONConf{1}%
 %\documentclass[12pt]{article}
+\RequirePackage{etex}
 \documentclass[preprint,9pt]{sigplanconf}
 % The following \documentclass options may be useful:
 %
@@ -14,6 +15,7 @@
 \usepackage{mathpartir}
 \usepackage{stmaryrd}
 \usepackage{wasysym}
+\usepackage{multicol}
 \usepackage{extarrows}
 \usepackage[usenames,dvipsnames,svgnames,table]{xcolor}
 \definecolor{light-gray}{gray}{0.9}
