per Dunfield's suggestion (via Matt), added a citation to Davies and Pfenning, 2000

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,4 +1,18 @@
 % !TEX root = hazelnut-popl17.tex
+@inproceedings{DBLP:conf/icfp/DaviesP00,
+  author    = {Rowan Davies and
+               Frank Pfenning},
+  title     = {Intersection types and computational effects},
+  booktitle = {ICFP},
+  _pages     = {198--208},
+  year      = {2000},
+  crossref  = {DBLP:conf/icfp/2000},
+  _url       = {http://doi.acm.org/10.1145/351240.351259},
+  _doi       = {10.1145/351240.351259},
+  timestamp = {Tue, 11 Jun 2013 13:51:25 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/icfp/DaviesP00},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
 
 @inproceedings{DBLP:conf/chi/LernerFG15,
   author    = {Sorin Lerner and
