citation for turing quote

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,4 +1,21 @@
 % !TEX root = hazelnut-popl17.tex
+
+@article{DBLP:journals/jacm/Minsky70,
+  author    = {Marvin Minsky},
+  title     = {Form and Content in Computer Science {(1970} {ACM} {Turing} {Lecture})},
+  journal   = {J. {ACM}},
+  volume    = {17},
+  number    = {2},
+  pages     = {197--215},
+  year      = {1970},
+  _url       = {http://doi.acm.org/10.1145/321574.321575},
+  _doi       = {10.1145/321574.321575},
+  timestamp = {Thu, 20 Nov 2003 12:28:18 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/jacm/Minsky70},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+
 @inproceedings{DBLP:conf/icfp/DaviesP00,
   author    = {Rowan Davies and
                Frank Pfenning},
