--- a/hazelnut-popl17.tex
+++ b/hazelnut-popl17.tex
@@ -333,16 +333,18 @@ The notion of having one of many possible locations within a term under a cursor
 % admissiblity of a derived form, like prevSib}
 
 \begin{quote}
-In any case, these are but steps toward more graphical program-description
-systems, for we will not forever stay confined to mere strings of symbols.
+\emph{In any case, these are but steps toward more graphical program-description
+systems, for we will not forever stay confined to mere strings of symbols.}
 
---- Marvin Minsky, Turing Award lecture
-\end{quote}% We recommend abbrvnat bibliography style.
+--- Marvin Minsky, Turing Award lecture \cite{DBLP:journals/jacm/Minsky70}
+\end{quote}
+
+
 \clearpage
+% We recommend abbrvnat bibliography style.
 \bibliographystyle{abbrvnat}
 
 % The bibliography should be embedded for final submission.
-
 \bibliography{bibliography}
 %\softraggedright
 %P. Q. Smith, and X. Y. Jones. ...reference text...
