added vspace back to author list to make things line up nicer /twitch

--- a/hazelnut-popl17.tex
+++ b/hazelnut-popl17.tex
@@ -1,5 +1,5 @@
 \def\OPTIONConf{1}%
-\newif\iftr\trfalse
+\newif\iftr\trtrue
 %\newif\iftr\trtrue
 %\documentclass[12pt]{article}
 \RequirePackage{etex}
@@ -117,7 +117,7 @@ basicstyle=\ttfamily\fontsize{8pt}{1em}\selectfont}
  \and
  $^2$~Oregon State University
  \and
- $^3$~University of Colorado Boulder
+ $^3$~University of Colorado Boulder\vspace{-10px}
 }
 {
 %\email{comar@cs.cmu.edu}\\
